--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <p>Hello, How are you pragadesh?</p>
+    <p>Hello, How are you?</p>
 </body>
