create a wep page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,158 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>The Barbers</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <p>Hello, How are you?</p>
+    <!--Header Start-->
+    <header class="header">
+        <!--Nav Start>-->
+        <nav class="nav">
+            <h1 class="logo">Barbers</h1>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Experience</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+            </ul>
+        </nav>
+        <!--Nav End-->
+    </header>
+    <!--Header End-->
+
+    <!--Section One Start-->
+    <section class="content_container">
+        <section class="header_content">
+            <h1 class="header_heading">
+                THE<br>
+                BARBERS
+            </h1>
+            <p class="header_sub-headings">
+                Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.
+            </p>
+            <div class="btn-container">
+                <a href="" class="main-btn">
+                    Learn More
+                </a>
+            </div>
+        </section>
+        <section class="header_img-container">
+            <img src="assets/jakob-owens-lkMJcGDZLVs-unsplash.jpg" class="header_img img-one" />
+            <img src="assets/stephan-louis-L3s5QySz5UM-unsplash.jpg" class="header_img img-two" />
+            <img src="" alt="">
+        </section>
+    </section>
+    <!--Section One End-->
+
+    <!--Experience Section Start-->
+    <section class="experience">
+        <section class="experience_content">
+            <h2 class="gray-heading">30 Years</h2>
+            <h1 class="header_heading experience-heading">EXPERIENCE</h1>
+            <p class="header_sub-headings experience_sub-headings">
+                Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.
+            </p>
+            <section class="btn-container">
+                <a href="" class="main-btn">Learn More</a>
+            </section>
+        </section>
+
+        <div class="experience-img">
+
+        </div>
+    </section>
+    <!--Eperience Section End-->
+
+    <!--Social Media Section Start-->
+    <section class="social-media">
+        <ul class="sm-container">
+            <div class="follow">FOLLOW</div>
+            <li class="list-items"><a href="">YOUTUBE</a></li>
+            <li class="list-items"><a href="">INSTAGRAM</a></li>
+            <li class="list-items"><a href="">FACEBOOK</a></li>
+            <li class="list-items"><a href="">X</a></li>
+        </ul>
+    </section>
+
+    <!--Social Media Section End-->
+
+    <!--Hero Section Start-->
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-img-container"></div>
+            <div class="hero_content">
+                <h1 class="header_heading hero_headings">
+                    Meet<br>
+                    Our Hero
+                </h1>
+                <p class="hearder_sub-headings hero_sub-headings">Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.    
+                </p>
+                <div class="btn-container">
+                    <a href="" class="main-btn">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Hero Section End-->
+
+    <!--Service Section Start-->
+    <section class="services">
+        <h2 class="gray-heading services_g-heading">Top Quality</h2>
+        <h1 class="header_heading services-heading">SERVICES</h1>
+
+        <section class="cards">
+            <div class="card">
+                <div class="card-img img-one"></div>
+                <div class="card-content">
+                    <h1 class="card-title">Hair Cutting</h1>
+                    <p class="card-info">Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.</p>
+                    <a href="" class="main-btn card-btn">Learn More</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img img-two"></div>
+                <div class="card-content">
+                    <h1 class="card-title">Bread Triming</h1>
+                    <p class="card-info">Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.</p>
+                    <a href="" class="main-btn card-btn">Learn More</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img img-three"></div>
+                <div class="card-content">
+                    <h1 class="card-title">Smooth Shave</h1>
+                    <p class="card-info">Barber is a person who occupation is mainly to cut dress groom style and shave men's and boy's hair.</p>
+                    <a href="" class="main-btn card-btn">Learn More</a>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <!--Service Section End-->
+
+    <!--Footer Section Start-->
+    <footer class="footer">
+        <div class="footer_card">
+            <h1 class="footer_card-title">About</h1>
+            <div class="footer_card-info">Genral</div>
+            <div class="footer_card-info">Traffics</div>
+            <div class="footer_card-info">FAQ</div>
+        </div>
+        <div class="footer_card">
+            <h1 class="footer_card-title">Legal</h1>
+            <div class="footer_card-info">Privacy Policy</div>
+            <div class="footer_card-info">Terms of Uses</div>
+            <div class="footer_card-info">Payments</div>
+        </div>
+        <div class="footer_card">
+            <h1 class="footer_card-title">Contact</h1>
+            <div class="footer_card-info">X</div>
+            <div class="footer_card-info">INSTAGRAM</div>
+            <div class="footer_card-info">FACEBOOK</div>
+        </div>
+    </footer>
+    <!--Footer Section End-->
+
 </body>
+</html>
